tests/fixtures/errors/e0405_negative_in_unsigned.mimz
// expect: E0405
module M {
  out y: bits[8]
  y = -1
}
